--- a/index.html
+++ b/index.html
@@ -2,14 +2,48 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Jugendhacker</title>
-</head>
-<body>
-Hi, ich bin Jugendhacker.<br>
-Ich bin Schüler und programmiere in meiner Freizeit gerne.<br>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="jugendhacker">
 
-<h3>Wie bin ich zu meinem Namen gekommen?</h3>
-Es ist schon einige Zeit her, da war ich auf einer Veranstaltung von <a href="https://jugendhackt.org">Jugend hackt</a>.<br>
-Ich brauchte damals einen Github-Account und der erste Name der mir in den Sinn kam und der noch frei war, war Jugendhacker.
+    <title>Jugendhacker</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="img/favicon.png" type="image/png">
+</head>
+<body id="page-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">Jugendhacker</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Navigation umschalten">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#about">Über</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <header class="bg-primary text-white">
+        <div class="container text-center">
+            <h1>Hi, ich bin Jugendhacker</h1>
+            <p class="lead">Einer von den "Junghackern"</p>
+        </div>
+    </header>
+    <script src="js/bootstrap.bundle.min.js"></script>
+
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <h2>Über mich</h2>
+                    <p class="lead"></p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
