--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="author" content="jugendhacker">
 
     <title>Jugendhacker</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" href="img/favicon.png" type="image/png">
+    <link rel="stylesheet" href="{{'css/bootstrap.min.css'|absolute_url}}">
+    <link rel="stylesheet" href="{{'css/main.css'|absolute_url}}">
+    <link rel="icon" href="{{'img/favicon.png'|absolute_url}}" type="image/png">
 </head>
 <body id="page-top">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -33,7 +33,6 @@
             <p class="lead">Einer von den "Junghackern"</p>
         </div>
     </header>
-    <script src="js/bootstrap.bundle.min.js"></script>
 
     <section id="about">
         <div class="container">
@@ -45,5 +44,6 @@
             </div>
         </div>
     </section>
+    <script src="{{'js/bootstrap.bundle.min.js'|absolute_url}}"></script>
 </body>
 </html>
